Bearer token added in swagger UI
